# CatPrediction

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  drift-check.yml
airflow/: docker-compose.airflow.yml
airflow/dags/: monitoring_pipeline.py  training_pipeline.py
api/: main.py
monitoring/: database.py  drift_check.py
src/: dataset.py  model.py  train.py
tests/: conftest.py  test_api.py
